--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@ color: gray;
 <p>! JavaScript отключён. Некоторые элементы сайта могут отображаться неправильно.</p>
 </center>
 </div>
-<script src="/elements.js"></script>
+<script src="/fordev/elements.js"></script>
 <script src="/block.js" type="text/javascript"></script>
 <script>    
 var ur = window.location.pathname,
