--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Потерялась страничка - KostySystem</title>
+<title>Потерялась страничка - KostySystem Development</title>
   <link rel="icon" href="/favicon.ico">
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
@@ -58,7 +58,7 @@ color: gray;
 <br>
 <br>
 <img src="/images/404image.png" width="70" height="70">
-<h1>KostySystem</h1>
+<h1>KostySystem Development</h1>
 <h2>Страница потеряна :(</h2>
 <hr>
 <br>
@@ -68,8 +68,9 @@ color: gray;
 <p><b>Вы можете перейти на главную или найти другую страничку в поиске!</b></p>
 <br>
 <br>
-<h1><a href="/">Перейти на главную</a></h1>
+<h1><a href="/">Перейти на главную KostySystem</a></h1>
 <h1><a href="#search">Найти другую страничку</a></h1>
+<h2><a href="/fordev/">Перейти на главную KostySystem Dev.</a></h2>
 <br><br><br>
 <h4 class="nydetcya-kogda-nibyd"><a onclick="pashalka()" id="nydkognib" style="cursor: text; text-decoration: none;">А эта страничка, возможно, когда-нибудь и найдётся!</a></h4>
 <br><br>
